{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Avatar",
            "id": "faa3f224-3075-4613-bc7f-947b9c958587",
            "actions": [
                {
                    "name": "WalkFWD",
                    "type": "Button",
                    "id": "2bf86932-9cf4-407f-a13c-fb69f6fee81b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "de033abc-bd89-4cd7-8a97-deb5be0ae3ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "5cd518ed-84f8-43a1-8bbf-a60cb76405ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WalkBWD",
                    "type": "Button",
                    "id": "d9e8858e-1a32-4028-bd86-6050f1fe7cf7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WalkLeft",
                    "type": "Button",
                    "id": "0dcc39cf-1237-4c3f-b5e2-3cf4a4c30879",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WalkRight",
                    "type": "Button",
                    "id": "64be550e-4b15-4258-a8ca-9942f26c40a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateUp",
                    "type": "Button",
                    "id": "706261a2-39f7-461f-8479-3a765691e237",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpeedUp",
                    "type": "Button",
                    "id": "03fc61f8-d907-4500-88f4-a9f136cf6dd8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpeedDown",
                    "type": "Button",
                    "id": "c3ba6b59-83fa-4f6f-b89a-0c5a59eda25d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4359c22-84a2-4517-9a0b-4ed5a4f4236e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkFWD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb871716-55f0-4182-8d45-c0859e967ca5",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkFWD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "512e753f-984f-44b3-aa00-9fc44f4bb8e3",
                    "path": "<HID::Microsoft Unknown>/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkFWD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66d5c143-6755-4dba-a81b-40de70b3f2b4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5de57dbd-6769-409c-bfea-e5efcd01f607",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "776f61d9-e056-4d75-a876-cd0a16cbf07d",
                    "path": "<HID::Microsoft Unknown>/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80bb9ded-3519-42f0-949b-26cccbe4f2d2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f339bc4-6b6a-449b-b052-5b32c1dc1ba7",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48c61e9e-3cbb-48d3-b15f-d1da2d3d3bd8",
                    "path": "<HID::Microsoft Unknown>/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ab003a6-0dd7-4833-8c44-849536d7456e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkBWD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0a0395a-39e3-4e0e-842d-fc5cc4f30c12",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkBWD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1943246e-80cd-4eac-99fc-69d96e7257d7",
                    "path": "<HID::Microsoft Unknown>/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkBWD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4084b12b-cf58-439f-9098-c357fede5256",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f1400d3-0c62-41a6-b138-6599a925baab",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fed4985-1ada-47d9-93a6-df1f4abbd32f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbe9b1e1-47c0-43fb-93e2-654bacefa600",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85e04384-58e6-4a43-9b73-fcd32960bb32",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4c7283c-4950-4cc9-adea-2e6efbfde9fb",
                    "path": "<HID::Microsoft Unknown>/button8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9dd6b3f7-863c-479a-a120-3defdf520935",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc8804e2-c7ff-48b9-9405-e6a6c24e649d",
                    "path": "<HID::Microsoft Unknown>/button7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "806f5bd9-1e0d-4da9-8096-ec638f26adc5",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}